# firebase-scrypt-python

./: README.md  pyproject.toml
src/firebase_scrypt/: firebasescrypt.py
tests/: test_firebasescrypt.py
