[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "firebase-scrypt"
version = "0.1.0"
description = "Python implementation of Firebase's scrypt password hashing algorithm."
authors = [
    {name = "Jaakko Laurila", email = "JaakkoL@users.noreply.github.com"},
    {name = "Nicholas Hairs", email = "info@nicholashairs.com"},
]
maintainers = [
    {name = "Nicholas Hairs", email = "info@nicholashairs.com"},
]


# Dependency Information
requires-python = ">=3.7"
dependencies = [
    "pycryptodome>=3.9",
]

# Extra information
readme = "README.md"
license = {file = "LICENCE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",  # This template is 3.7+
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "firebase",
    "scrypt",
]

[project.urls]
homepage = "https://github.com/nhairs/firebase-scrypt-python"


[project.optional-dependencies]
dev = [
    ### dev.sh dependencies
    ## Formatting / Linting
    "validate-pyproject[all]",
    "black",
    "pylint",
    "mypy",
    ## Testing
    "pytest",
    ## Docs
    "mkdocs",
    "mkdocs-material>=8.5",
    "mkdocs-awesome-pages-plugin",
    "mdx_truly_sane_lists",
    ## REPL
    "bpython",
]

[tool.setuptools.package-data]
firebase_scrypt = ["py.typed"]
